update: Wrap profile links inside anchor.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="src/stylesheets/main.css">
 
     <!-- Ionic icons -->
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!--<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">-->
 </head>
 <body>
     <div id="body-wrapper">
@@ -132,76 +132,90 @@
                 <!-- Portfolio Tiles -->
                 <!-- portfolio-row -->
                 <div class="portfolio-row auto-margin">
-                    <figure>
-                        <img src="public/img/thumbnails/image_sharing_thumb.png">
-                        <figcaption>
-                            <h4>
-                                Image Sharing App
-                            </h4>
-                            <p>
-                                UI; Flask back-end; SQL Database
-                            </p>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="public/img/thumbnails/aiai_thumb.png">
-                        <figcaption>
-                            <h4>
-                                AIAI
-                            </h4>
-                            <p>
-                                Website Revision
-                            </p>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="public/img/thumbnails/couch_thumb.png">
-                        <figcaption>
-                            <h4>
-                                COUCH
-                            </h4>
-                            <p>
-                                Website
-                            </p>
-                        </figcaption>
-                    </figure>
+                    <a href="#">
+                        <figure>
+                            <img src="public/img/thumbnails/image_sharing_thumb.png">
+                            <figcaption>
+                                <h4>
+                                    Image Sharing App
+                                </h4>
+                                <p>
+                                    UI; Flask back-end; SQL Database
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </a>
+
+                    <a href="#">
+                        <figure>
+                            <img src="public/img/thumbnails/aiai_thumb.png">
+                            <figcaption>
+                                <h4>
+                                    AIAI
+                                </h4>
+                                <p>
+                                    Website Revision
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </a>
+
+                    <a href="#">
+                        <figure>
+                            <img src="public/img/thumbnails/couch_thumb.png">
+                            <figcaption>
+                                <h4>
+                                    COUCH
+                                </h4>
+                                <p>
+                                    Website
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </a>
                 </div> <!-- /.portfolio-row -->
 
                 <!-- portfolio-row -->
                 <div class="portfolio-row auto-margin">
-                    <figure>
-                        <img src="public/img/thumbnails/iron_post_thumb.png">
-                        <figcaption>
-                            <h4>
-                                Iron Post
-                            </h4>
-                            <p>
-                                Website
-                            </p>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="public/img/thumbnails/cc_thumb.png">
-                        <figcaption>
-                            <h4>
-                                Conference Central
-                            </h4>
-                            <p>
-                                Back-end; Google App Engine
-                            </p>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="public/img/thumbnails/swiss_tournament_thumb.png">
-                        <figcaption>
-                            <h4>
-                                Swiss Tournament Planner
-                            </h4>
-                            <p>
-                                SQL Database
-                            </p>
-                        </figcaption>
-                    </figure>
+                    <a href="#">
+                        <figure>
+                            <img src="public/img/thumbnails/iron_post_thumb.png">
+                            <figcaption>
+                                <h4>
+                                    Iron Post
+                                </h4>
+                                <p>
+                                    Website
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <a href="#">
+                        <figure>
+                            <img src="public/img/thumbnails/cc_thumb.png">
+                            <figcaption>
+                                <h4>
+                                    Conference Central
+                                </h4>
+                                <p>
+                                    Back-end; Google App Engine
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <a href="#">
+                        <figure>
+                            <img src="public/img/thumbnails/swiss_tournament_thumb.png">
+                            <figcaption>
+                                <h4>
+                                    Swiss Tournament Planner
+                                </h4>
+                                <p>
+                                    SQL Database
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </a>
                 </div> <!-- /.portfolio-row -->
             </section> <!-- /#portfolio -->
 
