--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="src/stylesheets/main.css">
 
     <!-- Ionic icons -->
-    <!--<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">-->
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body>
     <div id="body-wrapper">
@@ -63,7 +63,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/test.svg">
+                                <img src="./public/img/sitting_200.svg">
                             </figure>
                         </div>
                         <div class="col-4">
