refactor: Finalize about section.

--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
                         <div class="col-4">
                             <p>
                                 Hi, my name is Dee Reddy. I'm a self-taught developer, currently residing in the Virginia/Maryland area.
-                                I'm a voracious learner -- whether that's reading about algorithm design or ancient philosophy,
+                                I'm a voracious learner -- whether that's <span>reading about algorithm design or ancient philosophy,</span>
                                 I am always looking to expand my understanding.
                             </p>
+                            <div class="skill-icons">
+                                <i class="ion-code-working"></i> Programmer <i class="ion-clipboard"></i> Writer
+                            </div>
                         </div>
                     </div> <!-- /.about-li -->
-
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
@@ -88,7 +90,7 @@
                                 I'm also experienced in SQL and RDBMS.
                             </p>
                             <div class="skill-icons">
-                                <i class="ion-social-python"></i> Python <i class="ion-social-nodejs"></i> Node.js
+                                <i class="ion-social-python"></i> Python <i class="ion-social-nodejs"></i> Node.js <i class="ion-social-buffer"></i> SQL
                             </div>
                         </div>
                     </div> <!-- /.about-li -->
