refactor: Finalize first 3 sections. Point portfolio links to imgs.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav class="container-row align-items-center">
                 <div class="col-1"></div>
                     <div class="col-4 logo">
-                        <img src="public/img/placeholder_logo.png" alt="signature logo">
+                        <strong>Dee Reddy</strong>
                     </div>
                     <div class="col-6 text-end">
                         <a href="#about"><button>about</button></a>
@@ -134,7 +134,7 @@
                 <!-- Portfolio Tiles -->
                 <!-- portfolio-row -->
                 <div class="portfolio-row auto-margin">
-                    <a href="#">
+                    <a href="public/img/portfolio/image_sharing_1.png" target="_blank">
                         <figure>
                             <img src="public/img/thumbnails/image_sharing_thumb.png">
                             <figcaption>
@@ -148,7 +148,7 @@
                         </figure>
                     </a>
 
-                    <a href="#">
+                    <a href="public/img/portfolio/aiai.png" target="_blank">
                         <figure>
                             <img src="public/img/thumbnails/aiai_thumb.png">
                             <figcaption>
@@ -162,7 +162,7 @@
                         </figure>
                     </a>
 
-                    <a href="#">
+                    <a href="public/img/portfolio/couch.png" target="_blank">
                         <figure>
                             <img src="public/img/thumbnails/couch_thumb.png">
                             <figcaption>
@@ -179,7 +179,7 @@
 
                 <!-- portfolio-row -->
                 <div class="portfolio-row auto-margin">
-                    <a href="#">
+                    <a href="public/img/portfolio/iron_post.png" target="_blank">
                         <figure>
                             <img src="public/img/thumbnails/iron_post_thumb.png">
                             <figcaption>
@@ -192,7 +192,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="#">
+                    <a href="public/img/portfolio/conference_central.png" target="_blank">
                         <figure>
                             <img src="public/img/thumbnails/cc_thumb.png">
                             <figcaption>
@@ -205,7 +205,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="#">
+                    <a href="public/img/portfolio/swiss_tournament.png" target="_blank">
                         <figure>
                             <img src="public/img/thumbnails/swiss_tournament_thumb.png">
                             <figcaption>
