feat: Add flex item properties.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- ================ MAIN ================ -->
         <main>
             <!-- ================ HEADER ================ -->
-            <header class="container">
+            <header id="header" class="container">
                 <nav class="container-row align-items-center">
                 <div class="col-1"></div>
                     <div class="col-4 logo">
@@ -30,16 +30,20 @@
                     <div class="col-6 text-end">
                         <a href="#about"><button>about</button></a>
                         <a href="#portfolio"><button>portfolio</button></a>
-                        <a href="#contact"><button>contact</button></a>
+                        <a href="#footer"><button>contact</button></a>
                     </div>
                 </nav>
             </header>
 
             <!-- ================ HOME ================ -->
             <section id="home" class="">
+                <div class="text-center">
+                    <h1>Dee Reddy</h1>
+                    <h5>Web Developer</h5>
+                </div>
                 <!-- Title -->
-                <div class="row full-height justify-center align-items-end">
-                    <img src="public/img/splash_gray.svg" class="splash-image">
+                <div class="test">
+                    <img src="public/img/splash_gray.svg" class="splash-image" >
                 </div> <!-- /.row -->
             </section> <!-- /#home -->
 
@@ -221,20 +225,13 @@
                 </div> <!-- /.portfolio-row -->
             </section> <!-- /#portfolio -->
 
-            <!-- ================ CONTACT ================ -->
-            <section id="contact" class="container">
-                <div class="container-row">
-                    <div class="col-12 text-center">
-                        CONTACT
-                    </div>
-                </div> <!-- /.container-row -->
-            </section> <!-- /#contact -->
+
         </main>
 
     </div> <!-- /#boddy-wrapper -->
     <!-- ================ FOOTER ================ -->
 
-    <footer class="container">
+    <footer id="footer" class="container">
         <div class="container-row align-items-center">
             <div class="col-1"></div>
             <div class="col-4" data-footer="&copy; 2016 Dee Reddy">&copy; 2016 Dee Reddy</div>
