stable: Finish basic layout.

--- a/index.html
+++ b/index.html
@@ -23,26 +23,25 @@
             <!-- ================ HEADER ================ -->
             <header id="header" class="container">
                 <nav class="container-row align-items-center">
-                <div class="col-1"></div>
-                    <div class="col-4 logo">
-                        <strong>Dee Reddy</strong>
-                    </div>
-                    <div class="col-6 text-end">
-                        <a href="#about"><button>about</button></a>
-                        <a href="#portfolio"><button>portfolio</button></a>
-                        <a href="#footer"><button>contact</button></a>
-                    </div>
+                    <div class="col-1"></div>
+                        <div class="col-4"></div>
+                        <div class="col-6 text-end">
+                            <a href="#about"><button>about</button></a>
+                            <a href="#portfolio"><button>portfolio</button></a>
+                            <a href="#footer"><button>contact</button></a>
+                        </div>
+                    <div class="col-2"></div>
                 </nav>
             </header>
 
             <!-- ================ HOME ================ -->
             <section id="home" class="">
-                <div class="text-center">
+                <div class="text-center home-title">
                     <h1>Dee Reddy</h1>
                     <h5>Web Developer</h5>
                 </div>
                 <!-- Title -->
-                <div class="test">
+                <div class="row flex-grow justify-center align-items-end">
                     <img src="public/img/splash_gray.svg" class="splash-image" >
                 </div> <!-- /.row -->
             </section> <!-- /#home -->
