--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="public/img/icon.ico">
     <!-- Styles -->
-    <link rel="stylesheet" href="src/stylesheets/main.css">
-
+    <link rel="stylesheet" href="./public/stylesheets/styles.min.css">
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
