refactor: Add media queries.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="public/img/icon.ico">
     <!-- Styles -->
-    <link rel="stylesheet" href="./public/stylesheets/styles.min.css">
+    <!-- TODO: make sure you point to minified CSS for production -->
+    <!--<link rel="stylesheet" href="./public/stylesheets/styles.min.css">-->
+    <link rel="stylesheet" href="./src/stylesheets/main.css">
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
@@ -27,7 +29,7 @@
                         <div class="col-6 text-end">
                             <a href="#about"><button>about</button></a>
                             <a href="#portfolio"><button>portfolio</button></a>
-                            <a href="#footer"><button>contact</button></a>
+                            <a href="mailto:deesus@yandex.com" target="_blank"><button>contact</button></a>
                         </div>
                     <div class="col-2"></div>
                 </nav>
@@ -247,6 +249,7 @@
                     <i class="ion-social-octocat"></i>
                 </a>
             </div>
+            <div class="col-1"></div>
         </div>
     </footer>
 
