refactor: Fix various queries.
Fixed queries for image in #home as well as portfolio title.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <!-- ================ PORTFOLIO ================ -->
             <section id="portfolio" class="">
                 <!-- Title -->
-                <div class="row auto-margin title" style="height: 4rem; width: 74%;">
+                <div class="row auto-margin title portfolio-title">
                     <div class="col-4">
                         <div class="div-line"></div>
                     </div>
