bug: Fix Chrome footer bug.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="public/img/icon.ico">
     <!-- Styles -->
     <!-- TODO: make sure you point to minified CSS for production -->
-    <!--<link rel="stylesheet" href="./public/stylesheets/styles.min.css">-->
-    <link rel="stylesheet" href="./src/stylesheets/main.css">
+    <link rel="stylesheet" href="./public/stylesheets/styles.min.css">
+
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
@@ -238,8 +238,8 @@
     </div> <!-- /#boddy-wrapper -->
     <!-- ================ FOOTER ================ -->
 
-    <footer id="footer" class="container">
-        <div class="container-row align-items-center">
+    <footer id="footer">
+        <div class="row align-items-center full-height" style="min-height: 8.49rem">
             <div class="col-1"></div>
             <div class="col-4" data-footer="&copy; 2016 Dee Reddy">&copy; 2016 Dee Reddy</div>
             <div class="col-6 text-end">
