bug: Fix IE issues.
Fixed IE sticky footer bug: explicitly set flex values. Replaced .ttf (IE doesn't support) with .woff files.

--- a/index.html
+++ b/index.html
@@ -263,6 +263,6 @@
     </footer>
 
     <!-- custom JS -->
-    <script src="public/js/scripts.js"></script>
+    <!--<script src="public/js/scripts.js"></script>-->
 </body>
 </html>
