bug: Fix IE responsive header.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- Styles -->
     <!-- TODO: make sure you point to minified CSS for production -->
-    <!--<link rel="stylesheet" href="./public/stylesheets/styles.min.css">-->
-    <link rel="stylesheet" href="./src/stylesheets/main.css">
+    <link rel="stylesheet" href="./public/stylesheets/styles.min.css">
+    <!--<link rel="stylesheet" href="./src/stylesheets/main.css">-->
 
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -26,14 +26,13 @@
             <!-- ================ HEADER ================ -->
             <header id="header" class="container">
                 <nav class="container-row align-items-center">
+                    <div class="col-5"></div>
+                    <div class="col-6 text-end">
+                        <a href="#about"><button>about</button></a>
+                        <a href="#portfolio"><button>portfolio</button></a>
+                        <a href="mailto:deesus@yandex.com" target="_blank"><button>contact</button></a>
+                    </div>
                     <div class="col-1"></div>
-                        <div class="col-4"></div>
-                        <div class="col-6 text-end">
-                            <a href="#about"><button>about</button></a>
-                            <a href="#portfolio"><button>portfolio</button></a>
-                            <a href="mailto:deesus@yandex.com" target="_blank"><button>contact</button></a>
-                        </div>
-                    <div class="col-2"></div>
                 </nav>
             </header>
 
