feat: Add alt text for images.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <!-- Title -->
                 <div class="row flex-grow justify-center align-items-end">
-                    <img src="public/img/splash_gray.svg" class="splash-image" >
+                    <img src="public/img/splash_gray.svg" class="splash-image" alt="Stylized image of Dee Reddy">
                 </div> <!-- /.row -->
             </section> <!-- /#home -->
 
@@ -68,7 +68,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/sitting_200.svg">
+                                <img src="./public/img/sitting_200.svg" alt="Man working on computer">
                             </figure>
                         </div>
                         <div class="col-4">
@@ -88,7 +88,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/code_laptop_200.svg">
+                                <img src="./public/img/code_laptop_200.svg" alt="Code on a laptop">
                             </figure>
                         </div>
                         <div class="col-4">
@@ -108,7 +108,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/devices_200_blue.svg">
+                                <img src="./public/img/devices_200_blue.svg" alt="Different devices screens: desktop and mobile">
                             </figure>
                         </div>
                         <div class="col-4">
@@ -148,7 +148,7 @@
                 <div class="portfolio-row auto-margin">
                     <a href="public/img/portfolio/image_sharing_1.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/image_sharing_thumb.png">
+                            <img src="public/img/thumbnails/image_sharing_thumb.png" alt="Portfolio preview: Image Sharing app">
                             <figcaption>
                                 <h4>
                                     Image Sharing App
@@ -162,7 +162,7 @@
 
                     <a href="public/img/portfolio/aiai.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/aiai_thumb.png">
+                            <img src="public/img/thumbnails/aiai_thumb.png" alt="Portfolio preview: AIAI website">
                             <figcaption>
                                 <h4>
                                     AIAI
@@ -176,7 +176,7 @@
 
                     <a href="public/img/portfolio/couch.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/couch_thumb.png">
+                            <img src="public/img/thumbnails/couch_thumb.png" alt="Portfolio preview: COUCH website">
                             <figcaption>
                                 <h4>
                                     COUCH
@@ -193,7 +193,7 @@
                 <div class="portfolio-row auto-margin">
                     <a href="public/img/portfolio/iron_post.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/iron_post_thumb.png">
+                            <img src="public/img/thumbnails/iron_post_thumb.png" alt="Portfolio preview: Iron Post website">
                             <figcaption>
                                 <h4>
                                     Iron Post
@@ -206,7 +206,7 @@
                     </a>
                     <a href="public/img/portfolio/conference_central.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/cc_thumb.png">
+                            <img src="public/img/thumbnails/cc_thumb.png" alt="Portfolio preview: Conference central app">
                             <figcaption>
                                 <h4>
                                     Conference Central
@@ -219,7 +219,7 @@
                     </a>
                     <a href="public/img/portfolio/swiss_tournament.png" target="_blank">
                         <figure>
-                            <img src="public/img/thumbnails/swiss_tournament_thumb.png">
+                            <img src="public/img/thumbnails/swiss_tournament_thumb.png" alt="Portfolio preview: Swiss Tournament scheduler">
                             <figcaption>
                                 <h4>
                                     Swiss Tournament Planner
