prototype: Create adaptive menu.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- Styles -->
     <!-- TODO: make sure you point to minified CSS for production -->
-    <link rel="stylesheet" href="./public/stylesheets/styles.min.css">
-    <!--<link rel="stylesheet" href="./src/stylesheets/main.css">-->
+    <!--<link rel="stylesheet" href="./public/stylesheets/styles.min.css">-->
+    <link rel="stylesheet" href="./src/stylesheets/main.css">
 
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -35,6 +35,15 @@
                     <div class="col-1"></div>
                 </nav>
             </header>
+            <!-- ================ Responsive Menu ================ -->
+            <nav id="drop-down-menu">
+                <a class="triple-bar"><i class="ion-navicon"></i></a>
+                <ul>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#portfolio">portfolio</a></li>
+                    <li><a href="mailto:deesus@yandex.com" target="_blank">contact</a></li>
+                </ul>
+            </nav>
 
             <!-- ================ HOME ================ -->
             <section id="home" class="">
@@ -243,7 +252,7 @@
         <div class="row align-items-center full-height">
             <div class="col-1"></div>
             <div class="col-4" data-footer="&copy; 2016 Dee Reddy">&copy; 2016 Dee Reddy</div>
-            <div class="col-6 text-end">
+            <div class="col-6 text-end social-container">
                 <!-- TODO: replace `;nbsp` with padding/maring -->
                 <a href="mailto:deesus@yandex.com" target="_blank">
                     <i class="ion-ios-email-outline"></i>
@@ -261,7 +270,11 @@
         </div>
     </footer>
 
+    <!-- jQuery CDN -->
+    <script src="http://code.jquery.com/jquery-2.2.2.min.js"
+            integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
+            crossorigin="anonymous"></script>
     <!-- custom JS -->
-    <!--<script src="public/js/scripts.js"></script>-->
+    <script src="src/js/scripts.js"></script>
 </body>
 </html>
