refactor: Update menu styles.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="col-1"></div>
                 </nav>
             </header>
-            <!-- ================ Responsive Menu ================ -->
+            <!-- ================ Adaptive Menu ================ -->
             <nav id="drop-down-menu">
                 <a class="triple-bar"><i class="ion-navicon"></i></a>
                 <ul>
