task: Minify and clean.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- Styles -->
     <!-- TODO: make sure you point to minified CSS for production -->
-    <!--<link rel="stylesheet" href="./public/stylesheets/styles.min.css">-->
-    <link rel="stylesheet" href="./src/stylesheets/main.css">
+    <link rel="stylesheet" href="./public/stylesheets/styles.min.css">
+    <!--<link rel="stylesheet" href="./src/stylesheets/main.css">-->
 
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -275,6 +275,6 @@
             integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
             crossorigin="anonymous"></script>
     <!-- custom JS -->
-    <script src="src/js/scripts.js"></script>
+    <script src="./public/js/scripts.min.js"></script>
 </body>
 </html>
