Bug: Separate bg overlay in adaptive menu.
The previous overlay covered the entire page preventing any sort
interaction. This was due to the fact that in CSS, child elements cannot
have more opacity than the parent (w/o hack); thus, we needed to move the
div outside the nav and re-code the styles, sections, etc.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="author" content="Dee Reddy">
     <meta charset="UTF-8">
 
-    <!-- Styles -->
-    <!-- TODO: make sure you point to minified CSS for production -->
-    <!--<link rel="stylesheet" href="./public/stylesheets/styles.min.css">-->
-    <link rel="stylesheet" href="./src/stylesheets/main.css">
+    <!-- Styles: -->
+    <!-- TODO: make sure you point to minified CSS for production: -->
+    <link rel="stylesheet" href="./public/stylesheets/styles.min.css">
+    <!--<link rel="stylesheet" href="./src/stylesheets/main.css">-->
 
     <!-- Ionic icons -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -20,6 +20,8 @@
 </head>
 <body>
     <div id="body-wrapper">
+        <!-- Overlays entire page: -->
+        <div class="entire-page hidden"></div>
 
         <!-- ================ MAIN ================ -->
         <main>
@@ -44,7 +46,7 @@
                     <li><a class="hidden" href="mailto:deesus@yandex.com" target="_blank">contact</a></li>
                 </ul>
             </nav>
-            <!--<div class="full-canvas"></div>-->
+
 
             <!-- ================ HOME ================ -->
             <section id="home" class="">
@@ -276,9 +278,9 @@
             integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
             crossorigin="anonymous"></script>
 
-    <!-- custom JS -->
-    <!-- TODO: ensure pointed to minified JS for production -->
-    <!--<script src="./public/js/scripts.min.js"></script>-->
-    <script src="./src/js/scripts.js"></script>
+    <!-- Custom JS: -->
+    <!-- TODO: ensure you point to minified JS for production: -->
+    <script src="./public/js/scripts.min.js"></script>
+    <!--<script src="./src/js/scripts.js"></script>-->
 </body>
 </html>
