bug: Fix data-skill values.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="text-center home-title">
                     <h1>Dee Reddy</h1>
                     <h5>Web Developer</h5>
-                </div>
+               </div>
                 <!-- Title -->
                 <div class="row flex-grow justify-center align-items-end">
                     <img src="public/img/splash_gray.svg" class="splash-image" alt="Stylized image of Dee Reddy">
@@ -111,8 +111,8 @@
                             </p>
                             <div class="skill-icons">
                                 <i class="ion-social-python" data-skill="Python"></i>   <span data-skill="Python"></span>
-                                <i class="ion-social-nodejs" data-skill="Node.js"></i>  <span data-skill="Python"></span>
-                                <i class="ion-social-buffer" data-skill="SQL"></i>      <span data-skill="Python"></span>
+                                <i class="ion-social-nodejs" data-skill="Node.js"></i>  <span data-skill="Node.js"></span>
+                                <i class="ion-social-buffer" data-skill="SQL"></i>      <span data-skill="SQL"></span>
                             </div>
                         </div>
                     </div> <!-- /.about-li -->
