bug: Add viewport and IE meta tags.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Dee Reddy Portfolio">
     <meta name="keywords" content="Dee, Reddy, Dee Reddy, Deepankara Reddy">
     <meta name="author" content="Dee Reddy">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
     <!-- Styles: -->
